TODO to remove some dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ repositories {
 
 dependencies {
     groovy group: 'org.codehaus.groovy', name: 'groovy', version: '1.8.6'
-
+// TODO some of this dependencies are not necessary
 	runtime 'org.codehaus.gpars:gpars:1.0-beta-2'
 	compile 'org.codehaus.gpars:gpars:1.0-beta-2'
 	testCompile 'org.codehaus.gpars:gpars:1.0-beta-2'
