--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'maven'
 
+/* Ensure source compatibility */
 sourceCompatibility=1.6
 targetCompatibility=1.6
 
